# soc

./: .gitignore  README.md  analysis.py  app.py  exceptions.py  models.py  pyproject.toml  schemas.py  settings.py
tests/: nebraska_30m_soc.tif  test_analysis.py  test_app.py  test_soc.py
